--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<a href="https://rephc.github.io/home">ホーム</a>
 							</li>
 							<li>
-								<a href="https://rephc.github.io/home/information">お知らせ</a>
+								<a href="https://rephc.github.io/information">お知らせ</a>
 							</li>
 						</ol>
 					</div>
@@ -50,7 +50,7 @@
 							<news-all-6715 data-filtered-count="118">
 								<div id="" class="site-home-news__lists">
 									<news-li-item-125 class="site-home-news__item">
-										<a href="https://rephc.github.io/home/information">
+										<a href="https://rephc.github.io/information">
 											<div class="site-home-news__item-info">
 												<div class="site-home-news__item-date is-loaded">2025年6月2日</div>
 												<div class="site-home-news__item-cat cat-shintest" style="background-color: #e18f1a">お知らせ</div>
