--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
 									<news-li-item-125 class="site-home-news__item">
 										<a href="https://rephc.github.io/information">
 											<div class="site-home-news__item-info">
+												<div class="site-home-news__item-date is-loaded">2025年6月9日</div>
+												<div class="site-home-news__item-cat cat-shintest" style="background-color: #1a753f">第３学年</div>
+											</div>
+											<div class="site-home-news__item-title">
+												<span>
+													<text-c>第３学年&nbsp;１学期&nbsp;期末&nbsp;数学の予想問題を公開しました。</text-c>
+												</span>
+											</div>
+										</a>
+										<script></script>
+									<news-li-item-125 class="site-home-news__item">
+										<a href="https://rephc.github.io/information">
+											<div class="site-home-news__item-info">
 												<div class="site-home-news__item-date is-loaded">2025年6月2日</div>
 												<div class="site-home-news__item-cat cat-shintest" style="background-color: #e18f1a">お知らせ</div>
 											</div>
@@ -70,7 +83,7 @@
 											</div>
 											<div class="site-home-news__item-title">
 												<span>
-													<text-c>第３学年 １学期 中間 数学の予想問題を公開しました。</text-c>
+													<text-c>第３学年&nbsp;１学期&nbsp;中間&nbsp;数学の予想問題を公開しました。</text-c>
 												</span>
 											</div>
 										</a>
@@ -100,5 +113,5 @@
 		             });
 		           });
 		</script>
-	
-</body></html>
+	</body>
+</html>
