--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 											</div>
 											<div class="site-home-news__item-title">
 												<span>
-													<text-c>第３学年&nbsp;１学期&nbsp;期末&nbsp;数学の予想問題を公開しました。</text-c>
+													<text-c>第３学年&nbsp;１学期&nbsp;期末&nbsp;国語と数学の予想問題を公開しました。</text-c>
 												</span>
 											</div>
 										</a>
