--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja"><head>
+<html lang="ja">
+	<head>
 		<meta charset="utf-8">
 		<meta content="IE=edge" http-equiv="X-UA-Compatible">
 		<meta content="width=device-width, initial-scale=1" name="viewport">
 		<meta content="telephone=no" name="format-detection">
 		<meta content="6sZZ6SmlbaBL3qnrUiSLaCLiU9JrMHvQq9B-Y3tPFak" name="google-site-verification">
 		<title>
-			予想問題作成委員会
+			お知らせ&nbsp;予想問題作成委員会
 		</title>
 		<link href="https://rephc.github.io/setting/favicon.ico" rel="shortcut icon">
 		<link href="https://rephc.github.io/setting/blocks.css" rel="stylesheet">
@@ -50,14 +51,14 @@
 							<news-all-6715 data-filtered-count="118">
 								<div id="" class="site-home-news__lists">
 									<news-li-item-125 class="site-home-news__item">
-										<a href="https://rephc.github.io/information">
+										<a href="https://rephc.github.io/tgpecc/1st-2/">
 											<div class="site-home-news__item-info">
 												<div class="site-home-news__item-date is-loaded">2025年6月9日</div>
 												<div class="site-home-news__item-cat cat-shintest" style="background-color: #1a753f">第３学年</div>
 											</div>
 											<div class="site-home-news__item-title">
 												<span>
-													<text-c>第３学年&nbsp;１学期&nbsp;期末&nbsp;国語と数学の予想問題を公開しました。</text-c>
+													<text-c>第３学年&nbsp;１学期&nbsp;期末&nbsp;国語、数学、社会の予想問題を公開しました。</text-c>
 												</span>
 											</div>
 										</a>
@@ -88,7 +89,6 @@
 											</div>
 										</a>
 										<script></script>
-									
 									</news-li-item-125>
 								</div>
 							</div>
@@ -99,19 +99,19 @@
 			</div>
 		</div>
 		<script>
-		           function toggleMenu() {
-		             const menu = document.getElementById('mainMenu');
-		             const toggle = document.getElementById('menuToggle');
-		             const isOpen = menu.classList.toggle('open');
-		             toggle.textContent = isOpen ? '✕ 閉じる' : '☰ メニュー';
-		           }
+		    function toggleMenu() {
+		    const menu = document.getElementById('mainMenu');
+		    const toggle = document.getElementById('menuToggle');
+		    const isOpen = menu.classList.toggle('open');
+		    toggle.textContent = isOpen ? '✕ 閉じる' : '☰ メニュー';
+		    }
 
-		           document.querySelectorAll('#mainMenu a').forEach(link => {
-		             link.addEventListener('click', () => {
-		               document.getElementById('mainMenu').classList.remove('open');
-		               document.getElementById('menuToggle').textContent = '☰ メニュー';
-		             });
-		           });
+		    document.querySelectorAll('#mainMenu a').forEach(link => {
+		    link.addEventListener('click', () => {
+		        document.getElementById('mainMenu').classList.remove('open');
+		        document.getElementById('menuToggle').textContent = '☰ メニュー';
+		        });
+		    });
 		</script>
 	</body>
 </html>
